--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 Composantes necessaires:
-  Postgres
-  Nodejs
-  npm
+  Postgres  (https://www.postgresql.org/)
+  Nodejs    (https://nodejs.org/)
+  npm       (https://www.npmjs.com/)
 
 Executer le fichier sql/create_db.sql dans postgres
 Executer le fichier sql/init_db.sql dans postgres
 Dans le dossier serveur, executer npm i
-Dans le dossier serveur, executer npm webservers.js
+Dans le dossier serveur, executer npm start
