--- a/serveur/README
+++ b/serveur/README
@@ -7,3 +7,6 @@ Executer le fichier sql/create_db.sql dans postgres
 Executer le fichier sql/init_db.sql dans postgres
 Dans le dossier serveur, executer npm i
 Dans le dossier serveur, executer npm start
+
+Test:
+Mon Linux ne démarre plus et je n'ai pas pu réinstaller tout l'environnement necessaire pour développer les tests
